--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -58,6 +58,15 @@
       <HintPath>..\packages\Microsoft.CodeAnalysis.Workspaces.Common.1.0.0-beta1-20141031-01\lib\net45\Microsoft.CodeAnalysis.Workspaces.Desktop.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Practices.Unity">
+      <HintPath>..\packages\Unity.3.5.1405-prerelease\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.Configuration">
+      <HintPath>..\packages\Unity.3.5.1405-prerelease\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention">
+      <HintPath>..\packages\Unity.3.5.1405-prerelease\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Collections.Immutable, Version=1.1.32.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <Private>True</Private>
@@ -95,8 +104,11 @@
     <Compile Include="ROMBuilder.cs" />
     <Compile Include="RoslynExtensions.cs" />
     <Compile Include="Subroutine.cs" />
+    <Compile Include="Compiler.GameClassCompiler.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Compiler.MethodCompiler.cs" />
+    <Compile Include="Compiler.SyntaxPreprocessor.cs" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
