--- a/ScreenColors/ScreenColors.csproj
+++ b/ScreenColors/ScreenColors.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Simple.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Framework\Framework.csproj">
