Explore alternative to preprocessor for binary expressions
* Handles simple addition and subtraction of bytes (inefficiently).

* The preprocessor is almost a couple hundred lines and just rewrites
expressions. This is around 100 lines total and handles add/sub. This is
probably much better.

* Only bytes are supported at this point.

--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -109,6 +109,7 @@
   <ItemGroup>
     <Compile Include="Compiler.MethodCompiler.cs" />
     <Compile Include="Compiler.SyntaxPreprocessor.cs" />
+    <Compile Include="Fragments.Math.cs" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
