Begin optimizer for compiled subroutines
* Redundant push/pull pairs are often generated during compilation, and are now
removed by the optimizer.

--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -97,6 +97,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Compiler.Optimizer.cs" />
     <Compile Include="Fragments.cs" />
     <Compile Include="Compiler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
