Move variable management into a class
* Local variables will be coming soon so I'm trying to avoid duplicating code.

* Removed GlobalInfo and replaced it with VariableInfo.

--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -106,6 +106,8 @@
     <Compile Include="RoslynExtensions.cs" />
     <Compile Include="Subroutine.cs" />
     <Compile Include="Compiler.GameClassCompiler.cs" />
+    <Compile Include="VariableInfo.cs" />
+    <Compile Include="VariableManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Compiler.MethodCompiler.cs" />
