More work on outputting a skeleton program
* JMP and .word supported. Contemplating deprecating factory methods taking
strings in favor of taking symbols for added safety.

* Added Symbols.cs, which lists all the vcs.h symbols as const strings to avoid
typos.

* Removed ScreenColors and added a general FunctionalitySamples project for
testing specific features (e.g. locals, globals, loops, etc). Added Empty.cs
to that which has no user-code, demonstrating just the skeleton program.

--- a/Framework/Framework.csproj
+++ b/Framework/Framework.csproj
@@ -39,10 +39,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssemblyFactory.cs" />
     <Compile Include="Attributes.cs" />
-    <Compile Include="Instructions.cs" />
+    <Compile Include="AssemblyLine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IOPorts.cs" />
+    <Compile Include="Symbols.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
