Support assignment to TIA registers, currently just COLUBK
* InitializeChangeBkColor test added. Changes COLUBK to a pink-ish color in the
initializer, making a program that's just a solid color.

* TIARegisters added to allow friendly reading/writing of TIA registers. Only
supports COLUBK, but any TIA write registers can be handled the same way. With
the exception of the strobe registers.

* Added CompilerIntrinsicGlobalAttribute to ease mapping arbitrarily-named
properties to a TIA register name.

--- a/Framework/Framework.csproj
+++ b/Framework/Framework.csproj
@@ -43,8 +43,8 @@
     <Compile Include="Attributes.cs" />
     <Compile Include="AssemblyLine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="IOPorts.cs" />
     <Compile Include="Symbols.cs" />
+    <Compile Include="TIARegisters.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
