--- a/FunctionalitySamples/FunctionalitySamples.csproj
+++ b/FunctionalitySamples/FunctionalitySamples.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Empty.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="InitializerChangeBkColor.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Framework\Framework.csproj">
