--- a/FunctionalitySamples/FunctionalitySamples.csproj
+++ b/FunctionalitySamples/FunctionalitySamples.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Empty.cs" />
+    <Compile Include="MainLoopChangeBkColor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="InitializerChangeBkColor.cs" />
   </ItemGroup>
