Support a single kernel called every scanline, start new test
* KernelChangeBkColor added. Changes the background color every other line.
Needs overscan support, byte addition support, and likely a new kernel technique
to finish. Or maybe that'll all go in a new test.

* Kernel methods supported. A technique has to be picked as well, and currently
it only supports calling the kernel method for every scanline.

* Add repeat/repend psuedo-op.

* Fix bug in ADC overload carry bit wasn't cleared.

--- a/FunctionalitySamples/FunctionalitySamples.csproj
+++ b/FunctionalitySamples/FunctionalitySamples.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{634B79C1-C51C-4029-9002-BF481C27756A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FunctionalitySamples</RootNamespace>
+    <RootNamespace>CSharpTo2600.FunctionalitySamples</RootNamespace>
     <AssemblyName>FunctionalitySamples</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Empty.cs" />
+    <Compile Include="KernelChangeBkColor.cs" />
     <Compile Include="MainLoopChangeBkColor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="InitializerChangeBkColor.cs" />
