--- a/UnitTests6502/packages.config
+++ b/UnitTests6502/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Common.Logging" version="3.0.0" targetFramework="net46" />
+  <package id="Common.Logging.Core" version="3.0.0" targetFramework="net46" />
+  <package id="System.Collections.Immutable" version="1.1.33-beta" targetFramework="net46" />
   <package id="xunit" version="2.0.0-rc1-build2826" targetFramework="net46" />
   <package id="xunit.abstractions" version="2.0.0-rc1-build2826" targetFramework="net46" />
   <package id="xunit.assert" version="2.0.0-rc1-build2826" targetFramework="net46" />
