--- a/UnitTests6502/packages.config
+++ b/UnitTests6502/packages.config
@@ -2,11 +2,7 @@
 <packages>
   <package id="Common.Logging" version="3.0.0" targetFramework="net46" />
   <package id="Common.Logging.Core" version="3.0.0" targetFramework="net46" />
+  <package id="NUnit" version="3.0.0-alpha-5" targetFramework="net46" />
+  <package id="NUnitTestAdapter" version="1.2" targetFramework="net46" />
   <package id="System.Collections.Immutable" version="1.1.33-beta" targetFramework="net46" />
-  <package id="xunit" version="2.0.0-rc1-build2826" targetFramework="net46" />
-  <package id="xunit.abstractions" version="2.0.0-rc1-build2826" targetFramework="net46" />
-  <package id="xunit.assert" version="2.0.0-rc1-build2826" targetFramework="net46" />
-  <package id="xunit.core" version="2.0.0-rc1-build2826" targetFramework="net46" />
-  <package id="xunit.extensibility.core" version="2.0.0-rc1-build2826" targetFramework="net46" />
-  <package id="xunit.runner.visualstudio" version="2.0.0-rc1-build1030" targetFramework="net46" />
 </packages>
