Move common code from FragmentTests to new AssemblyTests class
- Git thinks this is some weird rename/add combo. Hope that doesn't actually
mess anything up.

--- a/UnitTests6502/UnitTests6502.csproj
+++ b/UnitTests6502/UnitTests6502.csproj
@@ -73,7 +73,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssemblyTests.cs" />
     <Compile Include="FragmentTests.cs" />
+    <Compile Include="InstructionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
