General cleaning up and reorganizing
* Updated for CTP 6 (CSharpKind->Kind).

* EndianHelper added to hopefully prevent future endian mistakes by keeping
all endian-dependent stuff in one file.

* Migrating some methods from string->Symbol and Type/int->VariableInfo for
added safety and convenience.

* Added start of little/big-endian specific tests.

--- a/Framework/Framework.csproj
+++ b/Framework/Framework.csproj
@@ -43,7 +43,7 @@
     <Compile Include="Attributes.cs" />
     <Compile Include="AssemblyLine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Symbols.cs" />
+    <Compile Include="ReservedSymbols.cs" />
     <Compile Include="TIARegisters.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
