--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{8F1F889E-05AA-457F-AF67-1E2ABB056946}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Compiler</RootNamespace>
+    <RootNamespace>CSharpTo2600.Compiler</RootNamespace>
     <AssemblyName>Compiler</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -104,6 +104,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Range.cs" />
     <Compile Include="ROMBuilder.cs" />
+    <Compile Include="ROMInfo.cs" />
     <Compile Include="Subroutine.cs" />
     <Compile Include="Compiler.GameClassCompiler.cs" />
     <Compile Include="VariableInfo.cs" />
