Add more C# tests
* Enforce requirement for game class to be static.

* Variable name conflicts, no game class attribute, properly reported.

* Compiler now uses the CompilerOptions struct.

* Exceptions are in their own file and more have been added, so not everything
is a FatalCompilationException.

* AssemblyLine now has an equality test.

- I think my tabs->spaces got reset installing CTP 6, since e.g. Fragments'
indentation is messed up on GitHub. Hopefully fixed for that file.

--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -99,6 +99,7 @@
   <ItemGroup>
     <Compile Include="Compiler.Optimizer.cs" />
     <Compile Include="EndianHelper.cs" />
+    <Compile Include="Exceptions.cs" />
     <Compile Include="Fragments.cs" />
     <Compile Include="Compiler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
