--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -55,6 +55,7 @@
       <HintPath>..\Dependencies\6502Net\Processor.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Collections.Immutable, Version=1.1.33.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
