Recognize methods, get symbols for type and method
* MethodCompiler's constructor made private, static method added.

* Remove GameClassCompiler since TypeCompiler's on the way to replacing it.

* Add new sample for testing support for multiple user types.

* Add CompilationInfo. Eventually meant to keep all our compiled types in one
place, and make it easier to find e.g. the subroutine corresponding to a symbol.

--- a/FunctionalitySamples/FunctionalitySamples.csproj
+++ b/FunctionalitySamples/FunctionalitySamples.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Empty.cs" />
     <Compile Include="KernelChangeBkColor.cs" />
     <Compile Include="MainLoopChangeBkColor.cs" />
+    <Compile Include="MainLoopChangeBkColor_MultiType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="InitializerChangeBkColor.cs" />
   </ItemGroup>
