TypeCompiler indexes by ISymbols, produces non-compiled ProcessedTypes.
* Added ProcessedType (originally CompiledType) to hold info about types that
have gone through TypeCompiler.

* Methods are now all parsed before doing any compilation.

* Subroutine now holds its IMethodSymbol and can be created without a body.

--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -98,7 +98,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CompilationInfo.cs" />
-    <Compile Include="CompiledType.cs" />
+    <Compile Include="ProcessedType.cs" />
     <Compile Include="Compiler.Optimizer.cs" />
     <Compile Include="Compiler.TypeCompiler.cs" />
     <Compile Include="EndianHelper.cs" />
