Support method compilation
* Fixed issue with order of compilation mattering. Types can be compiled in any
order now.

* Parsing and compiling types have been split into two classes. Code to do
parsing/compiling was cleaned up.

* User code is a bit busted since we haven't fully gotten rid of the global
variable manager or ROMBuilder yet, so things like binary addition don't work.

--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -98,6 +98,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CompilationInfo.cs" />
+    <Compile Include="Compiler.TypeParser.cs" />
     <Compile Include="ProcessedType.cs" />
     <Compile Include="Compiler.Optimizer.cs" />
     <Compile Include="Compiler.TypeCompiler.cs" />
