--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Range.cs" />
     <Compile Include="ROMCreator.cs" />
+    <Compile Include="ROMInfo.cs" />
     <Compile Include="Subroutine.cs" />
     <Compile Include="VariableInfo.cs" />
   </ItemGroup>
