Begin support for multiple files
* Added CompilerWorkspace, which uses an AdhocWorkspace to create and compile
a project consisting of whatever files are passed in.

- Does not compile since we don't yet support multiple syntax trees and semantic
models.

--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -100,6 +100,7 @@
     <Compile Include="CompilationInfo.cs" />
     <Compile Include="Compiler.MemoryManager.cs" />
     <Compile Include="Compiler.TypeParser.cs" />
+    <Compile Include="CompilerWorkspace.cs" />
     <Compile Include="ProcessedType.cs" />
     <Compile Include="Compiler.Optimizer.cs" />
     <Compile Include="Compiler.TypeCompiler.cs" />
