--- a/FunctionalitySamples/FunctionalitySamples.csproj
+++ b/FunctionalitySamples/FunctionalitySamples.csproj
@@ -43,6 +43,8 @@
     <Compile Include="KernelChangeBkColor.cs" />
     <Compile Include="MainLoopChangeBkColor.cs" />
     <Compile Include="MainLoopChangeBkColor_MultiType.cs" />
+    <Compile Include="MainLoopChangeBkColor_MultiType_Data.cs" />
+    <Compile Include="MainLoopChangeBkColor_MultiType_Logic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="InitializerChangeBkColor.cs" />
   </ItemGroup>
