--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -97,7 +97,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CompilationInfo.cs" />
+    <Compile Include="CompilationState.cs" />
     <Compile Include="Compiler.MemoryManager.cs" />
     <Compile Include="Compiler.TypeParser.cs" />
     <Compile Include="CompilerWorkspace.cs" />
@@ -111,7 +111,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Range.cs" />
     <Compile Include="ROMCreator.cs" />
-    <Compile Include="ROMInfo.cs" />
+    <Compile Include="CompilationResult.cs" />
     <Compile Include="Subroutine.cs" />
     <Compile Include="VariableInfo.cs" />
   </ItemGroup>
