Support invoking methods with 0 parameters and a void return type
* Added the JSR and RTS 6502 instructions, and unit tests for them.

* Fixed bug caused by including trivia when emitting C# code as comments.

* Added extension methods for modifying subroutine bodies in different ways.

* Added KernelChangeBkColor_Methods functionality sample. Replaces previous
code with method calls. Confirmed to work.

- At this point methods are never inlined, so method invocations are extremely
wasteful in kernels.

--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -113,6 +113,7 @@
     <Compile Include="ROMCreator.cs" />
     <Compile Include="CompilationResult.cs" />
     <Compile Include="Subroutine.cs" />
+    <Compile Include="SubroutineBodyExtensions.cs" />
     <Compile Include="VariableInfo.cs" />
   </ItemGroup>
   <ItemGroup>
