--- a/FunctionalitySamples/FunctionalitySamples.csproj
+++ b/FunctionalitySamples/FunctionalitySamples.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Empty.cs" />
     <Compile Include="KernelChangeBkColor.cs" />
+    <Compile Include="KernelChangeBkColor_Methods.cs" />
     <Compile Include="MainLoopChangeBkColor.cs" />
     <Compile Include="KernelChangeBkColor_MultiType_File1.cs" />
     <Compile Include="KernelChangeBkColor_MultiType_File2.cs" />
