Add code for generating and representing method call hierarchies
- The hope is to expand upon this and use it for making better optimizations
and decisions about organizing memory. Currently it is unused.

--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -119,6 +119,7 @@
   <ItemGroup>
     <Compile Include="Compiler.MethodCompiler.cs" />
     <Compile Include="Fragments.Math.cs" />
+    <Compile Include="Compiler.MethodCallHierarchy.cs" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
