--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -119,7 +119,7 @@
   <ItemGroup>
     <Compile Include="Compiler.MethodCompiler.cs" />
     <Compile Include="Fragments.Math.cs" />
-    <Compile Include="Compiler.MethodCallHierarchy.cs" />
+    <Compile Include="MethodCallHierarchy.cs" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
