Wait for compilation to finish, bump to netstandard 1.5 to reference mscorlib assembly

--- a/FunctionalitySamples/FunctionalitySamples.csproj
+++ b/FunctionalitySamples/FunctionalitySamples.csproj
@@ -45,6 +45,7 @@
     <Compile Include="MainLoopChangeBkColor.cs" />
     <Compile Include="KernelChangeBkColor_MultiType_File1.cs" />
     <Compile Include="KernelChangeBkColor_MultiType_File2.cs" />
+    <Compile Include="Nothing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="InitializerChangeBkColor.cs" />
   </ItemGroup>
