--- a/VCSCompiler/VCSCompiler.csproj
+++ b/VCSCompiler/VCSCompiler.csproj
@@ -1,14 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.3</TargetFramework>
+    <TargetFramework>netstandard1.5</TargetFramework>
     <!-- Below is for Microsoft.Composition, remove when System.Composition is used by Roslyn (roslyn/#16040) -->
     <PackageTargetFallback>portable-net45+win8</PackageTargetFallback>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.1.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="2.1.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="2.1.0" />
+    <PackageReference Include="Mono.Cecil" Version="0.10.0-beta5" />
     <PackageReference Include="System.Reactive" Version="3.1.1" />
   </ItemGroup>
 
