Edit 6502.Net to be callable directly from compiler (and also to be .NET 5.0), support writing bin/asm/lst to given path.

--- a/VCSCompiler/VCSCompiler.csproj
+++ b/VCSCompiler/VCSCompiler.csproj
@@ -22,6 +22,9 @@
     <None Update="vcs.h">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="vil.h">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
