--- a/6502DotNet/6502DotNet.csproj
+++ b/6502DotNet/6502DotNet.csproj
@@ -1,8 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>_6502DotNet</RootNamespace>
+    <OutputType>library</OutputType>
   </PropertyGroup>
 
 </Project>
