--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# -----------------------
+# Custom
+*.bin
+*.lst
+# -----------------------
+
 # User-specific files
 *.suo
 *.user
