Happy New Year, RomData somehow works!: Support RomData<byte> at least (including generators) with constant lookup, fix generation of reserved globals, support dereferencing long pointers (still 1-byte limit for values),

--- a/VCSFramework/VCSFramework.csproj
+++ b/VCSFramework/VCSFramework.csproj
@@ -6,6 +6,10 @@
     <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
   <ItemGroup>
     <AdditionalFiles Include="vil.h">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
