Finish update to 6502.Net 2.3.3, reapply macro param fix (still need to report), need to investigate why +/- labels break in >=2.4 and report if it's a defect.

--- a/VCSCompiler/VCSCompiler.csproj
+++ b/VCSCompiler/VCSCompiler.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\6502DotNet\6502DotNet.csproj" />
+    <ProjectReference Include="..\6502DotNet\Core6502DotNet.csproj" />
     <ProjectReference Include="..\VCSFramework\VCSFramework.csproj" />
   </ItemGroup>
 
